Added maintenance message to replace the form while we work on the certificate issue.

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -214,3 +214,5 @@ de:
     needABreak: Brauchen Sie eine Pause Werbebilder
     radio: Radiospot von RTS (auf Französisch)
   pressKitFooter: Press Kit
+  maintenanceHeader: Wird gewartet
+  maintenanceHeader: Entschuldigung! Das System wird derzeit gewartet. Der Service wird so schnell wie möglich zurückkehren. Bitte versuchen Sie es bald erneut.
