--- a/locales/en.yml
+++ b/locales/en.yml
@@ -207,3 +207,5 @@ en:
     needABreak: Need a Break Promotional Images
     radio: Radiospot from RTS (in French)
   pressKitFooter: Press Kit
+  maintenanceHeader: Under Maintenance
+  maintenanceText: Sorry! The system is currently undergoing maintenance. Service will return as soon as possible, so please check back soon.
