--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -214,3 +214,5 @@ fr:
     needABreak: Besoin d'une pause Images promotionnelles
     radio: Radiospot de RTS
   pressKitFooter: Press Kit
+  maintenanceHeader: En maintenance
+  maintenanceText: Désolé! Le système est actuellement en cours de maintenance. Le service reviendra dès que possible, alors revenez bientôt.
