--- a/locales/it.yml
+++ b/locales/it.yml
@@ -208,3 +208,5 @@ it:
     needABreak: Hai bisogno di una pausa Immagini promozionali
     radio: Radiospot di RTS (in francese)
   pressKitFooter: Press Kit
+  maintenanceHeader: In manutenzione
+  maintenanceText: Siamo spiacenti! Il sistema è attualmente in fase di manutenzione. Il servizio verrà restituito al più presto, quindi ricontrolla presto.
