Adds extra vaccine types: astrazeneca, sputnik, other, unknown.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -219,3 +219,7 @@ en:
   vaccinePfizer: Pfizer
   vaccineModerna: Moderna
   vaccineJJ: Johnson & Johnson
+  vaccineAstraZeneca: AstraZeneca
+  vaccineSputnik: Sputnik
+  vaccineOther: Other
+  vaccineUnknown: I don't know which one
