--- a/locales/de.yml
+++ b/locales/de.yml
@@ -227,3 +227,7 @@ de:
   vaccinePfizer: Pfizer
   vaccineModerna: Moderna
   vaccineJJ: Johnson & Johnson
+  vaccineAstraZeneca: AstraZeneca
+  vaccineSputnik: Sputnik
+  vaccineOther: Andere
+  vaccineUnknown: Ich weiß nicht welche
