--- a/locales/de.yml
+++ b/locales/de.yml
@@ -224,7 +224,7 @@ de:
   whenVaccinatedFirst: Wann war Ihre erste Impfung?
   whenVaccinatedSecond: Wann war Ihre zweite Impfung (falls zutreffend)?
   vaccineType: Welche Art von COVID-19-Impfstoff haben Sie erhalten?
-  vaccinePfizer: Pfizer
+  vaccinePfizer: Pfizer/BioNTech
   vaccineModerna: Moderna
   vaccineJJ: Johnson & Johnson
   vaccineAstraZeneca: AstraZeneca
