fix contact email address

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -198,7 +198,7 @@ en:
     total: Total
   pressKit:
     header: News and Promotional Materials
-    infoText: Here is an overview of informational and promotional materials. You can download all materials <a href="/images/presskit/full_presskit.zip">here</a> or check them out below. As always, feel free to <a href="mailto:info@covid19survey.ch">contact us<a>.
+    infoText: Here is an overview of informational and promotional materials. You can download all materials <a href="/images/presskit/full_presskit.zip">here</a> or check them out below. As always, feel free to <a href="mailto:info@covidtracker.ch">contact us<a>.
     faq: Download a PDF of our FAQ
     interview: Interview with bodenseetv.ch
     poster: Promotional Poster A4
