--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -205,7 +205,7 @@ fr:
     total: Total
   pressKit:
     header: Nouvelles et matériel promotionnel
-    infoText: Voici un aperçu du matériel d'information et de promotion. Vous pouvez télécharger tous les documents <a href="/images/presskit/full_presskit.zip"> ici </a> ou les consulter ci-dessous. Comme toujours, n'hésitez pas à <a href="mailto:info@covid19survey.ch"> nous contacter <a>.
+    infoText: Voici un aperçu du matériel d'information et de promotion. Vous pouvez télécharger tous les documents <a href="/images/presskit/full_presskit.zip"> ici </a> ou les consulter ci-dessous. Comme toujours, n'hésitez pas à <a href="mailto:info@covidtracker.ch"> nous contacter <a>.
     faq: Téléchargez un PDF de notre FAQ
     interview: Entretien avec bodenseetv.ch
     poster: Affiche promotionnelle A4
