--- a/locales/it.yml
+++ b/locales/it.yml
@@ -197,7 +197,7 @@ it:
     total: Totale
   pressKit:
     header: Novità e materiale promozionale
-    infoText: Ecco una panoramica dei materiali informativi e promozionali. Puoi scaricare tutti i materiali <a href="/images/presskit/full_presskit.zip"> qui </a> o dai un'occhiata qui sotto. Come sempre, non esitare a <a href="mailto:info@covid19survey.ch">contattarci<a>.
+    infoText: Ecco una panoramica dei materiali informativi e promozionali. Puoi scaricare tutti i materiali <a href="/images/presskit/full_presskit.zip"> qui </a> o dai un'occhiata qui sotto. Come sempre, non esitare a <a href="mailto:info@covidtracker.ch">contattarci<a>.
     faq: Scarica un PDF delle nostre FAQ
     interview: Intervista con bodenseetv.ch
     poster: Poster promozionale A4
