--- a/locales/de.yml
+++ b/locales/de.yml
@@ -206,7 +206,7 @@ de:
     total: Gesamt
   pressKit:
     header: Nachrichten und Werbematerialien
-    infoText: Hier finden Sie eine Übersicht über Informations- und Werbematerialien. Sie können alle Materialien <a href="/images/presskit/full_presskit.zip"> hier </a> herunterladen oder unten nachlesen. Wenden Sie sich wie immer an, <a href="mailto:info@covid19survey.ch">kontaktieren Sie uns<a>.
+    infoText: Hier finden Sie eine Übersicht über Informations- und Werbematerialien. Sie können alle Materialien <a href="/images/presskit/full_presskit.zip"> hier </a> herunterladen oder unten nachlesen. Wenden Sie sich wie immer an, <a href="mailto:info@covidtracker.ch">kontaktieren Sie uns<a>.
     faq: Laden Sie ein PDF unserer FAQ herunter
     interview: Interview mit bodenseetv.ch
     poster: Werbeplakat A4
