--- a/locales/de.yml
+++ b/locales/de.yml
@@ -97,17 +97,7 @@ de:
   implementation: Umsetzung
   imprint: Impressum
   introduction: >-
-    <p>Schenken Sie uns 1 Minute Ihrer Zeit und helfen Sie uns die Dynamik von COVID-19 besser zu verstehen.</p>
-    <p>Egal ob Sie sich krank fühlen oder gesund: Ihre Daten können helfen, die medizinische Situation zu 
-      entspannen und Leben zu retten. Wenn Sie das untenstehende Formular ausfüllen, tragen Sie dazu bei, 
-      dass wir diese Krise gemeinsam meistern können. Im Idealfall wiederholen Sie Ihre Teilnahme einmal 
-      pro Woche (<a href="/images/covidtracker.ics">Kalendererinnerung einrichten</a>) oder sobald Sie sich krank fühlen.
-    </p>
-    <p><b>Wichtig:</b> Alle Daten werden anonym erhoben und erlauben es nicht einzelne Teilnehmende zu 
-      identifizieren. Covidtracker ist eine gemeinsame Nonprofit-initiative von Schweizer Wissenschaftlern
-      und Startups. Damit wir lernen die Dynamik von COVID-19 besser zu verstehen, sind alle anonymen 
-      Daten frei für die Forschung verfügbar.
-    </p>
+    <p> Die Umfrage wurde beendet. Wir danken Ihnen für ihre Unterstützung. </p>
   italy: Italien
   leavingHomeForWork: Verlassen Sie derzeit Ihr Zuhause um zur Arbeit zu gehen?
   loading: lade...
