--- a/locales/en.yml
+++ b/locales/en.yml
@@ -91,16 +91,7 @@ en:
   implementation: Realization
   imprint: Legal Notice
   introduction: >-
-    <p>Donate 1 minute of your time and help us to better understand the dynamics of COVID-19.</p>
-    <p>Whether you feel sick or healthy, your data can help save lives. By filling out the form below, 
-      you are helping us to overcome this crisis together. Ideally, repeat your participation weekly (<a href="/images/covidtracker.ics">set up
-      calendar event</a>) or whenever you feel ill.
-    </p>
-    <p><b>Important:</b> The data is collected anonymously and does not allow identification of individuals. 
-      This is a non-for profit initiative from academics
-      and startups in Switzerland, and all anonymous data is available for research 
-      aiming at better understanding COVID-19 dynamics.
-    </p>
+    <p> The survey has been closed. We thank you for your support.  </p>
   italy: Italy
   leavingHomeForWork: Are you currently leaving your home for work?
   loading: loading...
