--- a/locales/it.yml
+++ b/locales/it.yml
@@ -90,15 +90,7 @@ it:
   implementation: Attuazione
   imprint: Note legali
   introduction: >-
-    <p>La diffusione del coronavirus in Europa è molto rapida.</p> <p>Per
-    contrastare la malattia, i casi sospetti devono essere identificati il più
-    presto possibile. È questo lo scopo della campagna.</p>
-    <p><b>Indipendentemente dal fatto che sia sano o ammalato, che sia infetto o
-    meno: I suoi dati possono contribuire a salvare vite umane.</b> Con la
-    compilazione del modulo sottostante, può fornire il suo contributo, affinché
-    possiamo superare insieme questa crisi. L’ideale sarebbe poter partecipare a
-    quotidianamente (<a href="/images/covidtracker.ics">Imposta un promemoria del calendario</a>).</p> <p>Importante: il rilevamento dei dati garantisce
-    l’anonimato e non consente di trarre conclusioni sulla sua identità.</p>
+    <p>Il sondaggio è stato chiuso. Vi ringraziamo per il vostro sostegno. </p>
   italy: Italia
   leavingHomeForWork: Al momento attuale esce di casa solo per andare al lavoro?
   loading: loading...
